apps/observability/grafana/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: main
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
      sectionName: https-wildcard
  hostnames:
    - grafana.lab.the-lab.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
          group: ''
          kind: Service
